Correct sidebar spacing

--- a/public/css/drasko.css
+++ b/public/css/drasko.css
@@ -57,8 +57,8 @@
 	display: block;
 	width: 100%;
 	padding: 0;
-	padding-top: 20px;
-	padding-bottom: 20px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 #sidebar_contact li {
